# agentic-mcp-loan-example

./: .gitignore  AGENTS.md  README.md  docker-compose.yml
agenticai_v2/: .env.example  Dockerfile  pyproject.toml
agenticai_v2/agenticai_v2/: agent.py  app.py  config.py  llm_client.py  mcp_client.py  state.py
agenticai_v2/assets/how-to-set-ollama-c/: how-to-get-ollama-key.md
agenticai_v2/prompts/: system_prompt.md
agenticai_v2/static/css/: styles.css
agenticai_v2/static/js/: chat.js  settings.js
agenticai_v2/templates/: index.html  settings.html
mcp_mssql/: .env.example  Dockerfile  pyproject.toml
mcp_mssql/mcp_mssql/: config.py  server.py  sql_runner.py
