[project]
name = "agenticai-v2"
version = "0.1.0"
description = "Agentic AI chat service answering LOAN questions via mcp_mssql"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "openai>=1.50.0",
    "mcp>=1.2.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "jinja2>=3.1.0",
]

[project.scripts]
agenticai-v2 = "agenticai_v2.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agenticai_v2"]
