[project]
name = "mcp-mssql-loan-query"
version = "0.1.0"
description = "MCP server exposing read-only LOAN query tools backed by MSSQL stored procedures"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "pyodbc>=5.1.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
mcp-mssql-loan-query = "mcp_mssql.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_mssql"]
